code is work, adds some improvements in code structure