@@ -2,7 +2,6 @@ package searchengine.utils.entityHandler;
 
 import java.util.Collection;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import searchengine.dto.indexing.Site;
@@ -19,13 +18,18 @@ public class SiteHandler {
   public synchronized Collection<SiteModel> getIndexedSiteModelFromSites(
       Collection<Site> sitesToParse) {
 
-    return sitesToParse.parallelStream()
-        .map(this::getSiteIfExistOrCreate)
-        .collect(Collectors.toList());
+    return sitesToParse.parallelStream().map(this::getSiteIfExistOrCreate).toList();
   }
 
   private SiteModel getSiteIfExistOrCreate(Site site) {
-    return Optional.ofNullable(siteRepository.findSiteByUrl(site.getUrl()))
-        .orElseGet(() -> entityFactory.createSiteModel(site));
+    return Optional.ofNullable(getExistedSiteModel(site)).orElseGet(() -> createSiteModel(site));
+  }
+
+  private SiteModel getExistedSiteModel(Site site) {
+    return siteRepository.findSiteByUrl(site.getUrl());
+  }
+
+  private SiteModel createSiteModel(Site site) {
+    return entityFactory.createSiteModel(site);
   }
 }
